adicionando filtro da tela principal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="hide">
+    <header class="">
         <h1>"Mas os que esperam no Senhor renovarão as suas forças; subirão com asas como águias; correrão, e não se
             cansarão; andarão, e não se fatigarão."
         </h1>
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="principal hide">
+        <section class="principal ">
             <form>
                 <h1 class="filtro">Filtrar:</h1>
                 <div class="form-inputs">
@@ -49,28 +49,10 @@
                         <input type="text" name="Group" id="Group">
                     </div>
                 </div>
-                <button type="submit" id="submit-filtro">Filtrar</button>
             </form>
-    
-            <div class="book">
-                <div class="book-title">
-                    <h1 id="book-name">Gênesis</h1>
-                    <p id="book-abrev">gn</p>
-                </div>
-                <div class="book-info">
-                    <div class="book-line">
-                        <p id="book-author">Autor:</p>
-                        <p id="book-author">Moisés</p>
-                    </div>
-                    <div class="book-line">
-                        <p id="book-group">Grupo:</p>
-                        <p id="book-group">Pentateuco</p>
-                    </div>
-                    <div class="book-line">
-                        <p id="book-cap">Cap:</p>
-                        <p id="book-cap">50</p>
-                    </div>
-                </div>
+
+            <div class="array-book">
+
             </div>
         </section>
 
@@ -100,7 +82,7 @@
             </div>
         </section>
 
-        <section class="book-selected-verse ">
+        <section class="book-selected-verse hide">
             <button type="reset">Voltar</button>
             <div class="book-selected-content">
                 <h1 id="book-selected-title">Gênesis</h1>
