começando a segunda tela

--- a/index.html
+++ b/index.html
@@ -74,11 +74,8 @@
             </form>
 
             <div class="book-selected-content">
-                <h1 id="book-selected-title">Gênesis</h1>
-                <h2 id="book-selected-cap">1</h2>
-                <p id="book-selected-verses">ytagshkjdk adakf hsdfk adskfj ajdf hadsjh flash dfkjlsh adfjkash dfkjahs
-                    fjkah
-                    sdfjkh asjf asjdfh akjdfh jkash dfjkhdsfkj</p>
+                <h1 id="book-selected-title"></h1>
+                <h2 id="book-selected-cap"></h2>
             </div>
         </section>
 
