--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <div class="book-selected-content">
                 <h1 id="book-selected-title"></h1>
                 <h2 id="book-selected-cap"></h2>
+                <div class="book-selected-text"></div>
             </div>
         </section>
 
