adicionando capitulos dos livros

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="form-inputs">
                     <div class="form-input">
                         <label for="cap">Capitulo</label>
-                        <input type="text" name="cap" id="cap">
+                        <input type="text" name="cap" id="cap" value="1">
                     </div>
                     <div class="form-input">
                         <label for="vers">Versículo</label>
